--- a/Vulcanoriosity/CSS/Style.css
+++ b/Vulcanoriosity/CSS/Style.css
@@ -2,24 +2,29 @@
     margin: 0;
     text-decoration: none;
     font-family: 'Lora', serif;
-    }
-
+    padding: 0;
+    box-sizing: border-box;
+    text-align: justify;
+}
 h1{
-    font-size: 100px;
     background-color:#2e0d0a;
     color:white;
+    text-align: center;
+    font-size: 500%;
 }
 
 h3{
     background-color: #3b1612;
     color:white;
-
+    text-align: center;
+    font-size: 150%;
 }
 
 h2{
     background-color: #3b1612;
     color:white;
-
+    text-align: center;
+    font-size: 150%;
 }
 
 body{
@@ -28,15 +33,66 @@ body{
 
 }
 
+table{
+    background-color: #ee671e;
+    color:white;
+    text-align: justify;
+    margin: auto;
+
+}
+
+.flex_container{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #ee671e;
+    margin: 50px 500px;
+    padding: 10px;
+    font-size:xx-large;
+    color:white;
+}
+.form{
+    text-align: center;
+    flex:1;
+    color:white;
+
+}
+.form_submit{
+    size:10px;
+    color:white;
+}
+
+.cuerpo{
+    margin-left: 200px;
+    margin-right: 200px;
+    color:white;
+
+}
 .info{
+    text-align: center;
+    text-decoration: none;
     font-family: 'Lora', serif;
     font-size: 15px;
     background-color: #5e120a;
     color:white;
-
+    position: relative;
 }
 .trabaja{
+    text-decoration: none;
     font-size: 30px;
     color:white;
 
+}
+.cabeza{
+    position: sticky;
+    text-align: center;
+    color:white;
+    top:0;
+}
+.foto{
+    text-align: center;
+}
+.menu{
+    text-align: center;
 }
