--- a/Vulcanoriosity/CSS/Style.css
+++ b/Vulcanoriosity/CSS/Style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     text-decoration: none;
     font-family: 'Lora', serif;
@@ -6,93 +6,210 @@
     box-sizing: border-box;
     text-align: justify;
 }
-h1{
-    background-color:#2e0d0a;
-    color:white;
+
+h1 {
+    background-color: #2e0d0a;
+    color: white;
     text-align: center;
-    font-size: 500%;
+    font-size: 1000%;
 }
 
-h3{
+h3 {
     background-color: #3b1612;
-    color:white;
+    color: white;
     text-align: center;
-    font-size: 150%;
+    font-size: 200%;
 }
 
-h2{
+h2 {
     background-color: #3b1612;
-    color:white;
+    color: white;
     text-align: center;
-    font-size: 150%;
+    font-size: 300%;
 }
 
-body{
+body {
     background-color: #732a15;
-    color:white;
+    color: white;
 
 }
 
-table{
+table {
     background-color: #ee671e;
-    color:white;
+    color: white;
     text-align: justify;
     margin: auto;
 
 }
 
-.flex_container{
+.flex_container {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     background-color: #ee671e;
-    margin: 50px 500px;
+    margin: 10%;
     padding: 10px;
-    font-size:xx-large;
-    color:white;
+    font-size: xx-large;
+    color: white;
 }
-.form{
+
+.form {
     text-align: center;
-    flex:1;
-    color:white;
+    flex: 1;
+    color: white;
 
 }
-.form_submit{
-    size:10px;
-    color:white;
+
+.form_submit {
+    size: 10%;
+    color: white;
 }
 
-.cuerpo{
-    margin-left: 200px;
-    margin-right: 200px;
-    color:white;
+.cuerpo {
+    margin-left: 15%;
+    margin-right: 15%;
+    font-size: 350%;
+    color: white;
 
 }
-.info{
+
+.info {
     text-align: center;
     text-decoration: none;
     font-family: 'Lora', serif;
     font-size: 15px;
     background-color: #5e120a;
-    color:white;
+    color: white;
     position: relative;
 }
-.trabaja{
+
+.trabaja {
     text-decoration: none;
-    font-size: 30px;
-    color:white;
+    font-size: 150%;
+    color: white;
 
 }
-.cabeza{
+
+.cabeza {
     position: sticky;
     text-align: center;
-    color:white;
-    top:0;
+    color: white;
+    top: 0;
 }
-.foto{
+
+.foto {
     text-align: center;
 }
-.menu{
+
+.menu {
     text-align: center;
+}
+
+.fotico {
+    width: 20%;
+}
+
+html,
+body {
+    margin: 0px;
+    padding: 0px;
+    font-size: 65%;
+}
+
+.grid {
+    position: relative;
+    display: inline-grid;
+    grid-template-columns: 100%;
+    width: 90%;
+    margin-left: 5%;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.grid div {
+    color: #FFFFFF;
+    min-height: 200px;
+    max-height: 200px;
+    width: 90%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+    position: relative;
+}
+
+.imagen {
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(100%);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.imagen:hover {
+    filter: grayscale(0%);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.imagen div {
+    position: relative;
+    margin-top: 80px;
+    width: 100%;
+    text-align: center;
+    font-size: 3rem;
+}
+
+@media only screen and (min-width: 1200px) {
+    .grid {
+        grid-template-columns: 33.3% 33.3% 33.3%;
+    }
+
+    .imagen div {
+        font-size: 2.5rem;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -ms-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s;
+    }
+}
+    @media only screen and (max-width: 1200px) {
+        .grid {
+            grid-template-columns:50% 50%;
+        }
+    
+        .imagen div {
+            font-size: 2.5rem;
+            -webkit-transition: all 0.3s;
+            -moz-transition: all 0.3s;
+            -ms-transition: all 0.3s;
+            -o-transition: all 0.3s;
+            transition: all 0.3s;
+        }
+}
+@media only screen and (max-width: 550px) {
+    .grid {
+        grid-template-columns: 100%;
+    }
+
+    .imagen div {
+        font-size: 2.5rem;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        -ms-transition: all 0.3s;
+        -o-transition: all 0.3s;
+        transition: all 0.3s;
+    }
 }
